fixed footer overlapping bug

--- a/src/static/sass/components/auth/sign-in-sign-up.scss
+++ b/src/static/sass/components/auth/sign-in-sign-up.scss
@@ -1,7 +1,7 @@
 .sign-in-sign-up {
   background-color: white;
   padding-top: 1rem;
-  max-height: 70vh;
+  height: 100%;
 
   .container {
     display: flex;
